--- a/covet/pkg/github.com/johnstarich/go/covet/internal/index.html
+++ b/covet/pkg/github.com/johnstarich/go/covet/internal/index.html
@@ -124,7 +124,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						Package minmax contains several type-specific min and max functions.
+						Package minmax contains min and max functions.
 					</td>
 				</tr>
 			
