--- a/covet/src/github.com/johnstarich/go/covet/internal/span/span.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/span/span.go.html
@@ -66,16 +66,16 @@
 <span id="L9" class="ln">     9  </span>
 <span id="L10" class="ln">    10  </span><span class="comment">// Span is a numeric range with an inclusive Start and exclusive End index. i.e. [Start, End)</span>
 <span id="L11" class="ln">    11  </span>type Span struct {
-<span id="L12" class="ln">    12  </span>	Start int64 <span class="comment">// inclusive</span>
-<span id="L13" class="ln">    13  </span>	End   int64 <span class="comment">// exclusive</span>
+<span id="L12" class="ln">    12  </span>	Start uint <span class="comment">// inclusive</span>
+<span id="L13" class="ln">    13  </span>	End   uint <span class="comment">// exclusive</span>
 <span id="L14" class="ln">    14  </span>}
 <span id="L15" class="ln">    15  </span>
 <span id="L16" class="ln">    16  </span><span class="comment">// Intersection returns a Span representing the intersection of s and other.</span>
 <span id="L17" class="ln">    17  </span><span class="comment">// Returns false if they do not intersect.</span>
 <span id="L18" class="ln">    18  </span>func (s Span) Intersection(other Span) (Span, bool) {
 <span id="L19" class="ln">    19  </span>	intersection := Span{
-<span id="L20" class="ln">    20  </span>		Start: minmax.MaxInt64(s.Start, other.Start),
-<span id="L21" class="ln">    21  </span>		End:   minmax.MinInt64(s.End, other.End),
+<span id="L20" class="ln">    20  </span>		Start: minmax.Max(s.Start, other.Start),
+<span id="L21" class="ln">    21  </span>		End:   minmax.Min(s.End, other.End),
 <span id="L22" class="ln">    22  </span>	}
 <span id="L23" class="ln">    23  </span>	if intersection.Start &lt; intersection.End {
 <span id="L24" class="ln">    24  </span>		return intersection, true
@@ -84,7 +84,7 @@
 <span id="L27" class="ln">    27  </span>}
 <span id="L28" class="ln">    28  </span>
 <span id="L29" class="ln">    29  </span><span class="comment">// Len returns the distance between Start and End</span>
-<span id="L30" class="ln">    30  </span>func (s Span) Len() int64 {
+<span id="L30" class="ln">    30  </span>func (s Span) Len() uint {
 <span id="L31" class="ln">    31  </span>	return s.End - s.Start
 <span id="L32" class="ln">    32  </span>}
 <span id="L33" class="ln">    33  </span>
@@ -100,8 +100,8 @@
 <span id="L43" class="ln">    43  </span>		return Span{}, false
 <span id="L44" class="ln">    44  </span>	}
 <span id="L45" class="ln">    45  </span>	return Span{
-<span id="L46" class="ln">    46  </span>		Start: minmax.MinInt64(s.Start, other.Start),
-<span id="L47" class="ln">    47  </span>		End:   minmax.MaxInt64(s.End, other.End),
+<span id="L46" class="ln">    46  </span>		Start: minmax.Min(s.Start, other.Start),
+<span id="L47" class="ln">    47  </span>		End:   minmax.Max(s.End, other.End),
 <span id="L48" class="ln">    48  </span>	}, true
 <span id="L49" class="ln">    49  </span>}
 <span id="L50" class="ln">    50  </span>
