--- a/datasize/src/github.com/johnstarich/go/datasize/size.go.html
+++ b/datasize/src/github.com/johnstarich/go/datasize/size.go.html
@@ -63,7 +63,7 @@
 <span id="L6" class="ln">     6  </span>	&#34;math/big&#34;
 <span id="L7" class="ln">     7  </span>)
 <span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span><span class="comment">//nolint:gochecknoglobals,gomnd // These are all effectively constants as big.Int types.</span>
+<span id="L9" class="ln">     9  </span><span class="comment">//nolint:gochecknoglobals,mnd // These are all effectively constants as big.Int types.</span>
 <span id="L10" class="ln">    10  </span>var (
 <span id="L11" class="ln">    11  </span>	kilobytes  = big.NewInt(1e3)
 <span id="L12" class="ln">    12  </span>	megabytes  = big.NewInt(1e6)
