--- a/dns/src/github.com/johnstarich/go/dns/staggercast/conn_test.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/staggercast/conn_test.go.html
@@ -187,7 +187,7 @@
 <span id="L130" class="ln">   130  </span>
 <span id="L131" class="ln">   131  </span>			res := &amp;net.Resolver{
 <span id="L132" class="ln">   132  </span>				PreferGo: true,
-<span id="L133" class="ln">   133  </span>				Dial: func(ctx context.Context, network, address string) (net.Conn, error) {
+<span id="L133" class="ln">   133  </span>				Dial: func(_ context.Context, _, _ string) (net.Conn, error) {
 <span id="L134" class="ln">   134  </span>					var conns []PacketConn
 <span id="L135" class="ln">   135  </span>					for _, addr := range servers {
 <span id="L136" class="ln">   136  </span>						conns = append(conns, dialUDP(t, addr))
@@ -239,7 +239,7 @@
 <span id="L182" class="ln">   182  </span>		servers := startServers(t)
 <span id="L183" class="ln">   183  </span>		res := &amp;net.Resolver{
 <span id="L184" class="ln">   184  </span>			PreferGo: true,
-<span id="L185" class="ln">   185  </span>			Dial: func(ctx context.Context, network, address string) (net.Conn, error) {
+<span id="L185" class="ln">   185  </span>			Dial: func(_ context.Context, _, _ string) (net.Conn, error) {
 <span id="L186" class="ln">   186  </span>				var conns []PacketConn
 <span id="L187" class="ln">   187  </span>				for _, addr := range servers {
 <span id="L188" class="ln">   188  </span>					conns = append(conns, dialUDP(t, addr))
@@ -269,7 +269,7 @@
 <span id="L212" class="ln">   212  </span>		const delay = 1 * time.Second
 <span id="L213" class="ln">   213  </span>		res := &amp;net.Resolver{
 <span id="L214" class="ln">   214  </span>			PreferGo: true,
-<span id="L215" class="ln">   215  </span>			Dial: func(ctx context.Context, network, address string) (net.Conn, error) {
+<span id="L215" class="ln">   215  </span>			Dial: func(ctx context.Context, _, _ string) (net.Conn, error) {
 <span id="L216" class="ln">   216  </span>				var conns []PacketConn
 <span id="L217" class="ln">   217  </span>				for _, addr := range servers {
 <span id="L218" class="ln">   218  </span>					conns = append(conns, dialUDP(t, addr))
@@ -313,7 +313,7 @@
 <span id="L256" class="ln">   256  </span>		servers := startServers(t)
 <span id="L257" class="ln">   257  </span>		res := &amp;net.Resolver{
 <span id="L258" class="ln">   258  </span>			PreferGo: true,
-<span id="L259" class="ln">   259  </span>			Dial: func(ctx context.Context, network, address string) (net.Conn, error) {
+<span id="L259" class="ln">   259  </span>			Dial: func(_ context.Context, _, _ string) (net.Conn, error) {
 <span id="L260" class="ln">   260  </span>				var conns []PacketConn
 <span id="L261" class="ln">   261  </span>				for _, addr := range servers {
 <span id="L262" class="ln">   262  </span>					conns = append(conns, dialUDP(t, addr))
