--- a/dns/src/github.com/johnstarich/go/dns/testlogger_test.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/testlogger_test.go.html
@@ -91,21 +91,22 @@
 <span id="L34" class="ln">    34  </span>	return *l.core.Load().(*zapcore.Core)
 <span id="L35" class="ln">    35  </span>}
 <span id="L36" class="ln">    36  </span>
-<span id="L37" class="ln">    37  </span>func (l *testLogger) Enabled(level zapcore.Level) bool         { return l.getCore().Enabled(level) }
-<span id="L38" class="ln">    38  </span>func (l *testLogger) With(fields []zapcore.Field) zapcore.Core { return l } <span class="comment">//nolint:ireturn // Implements zapcore.Core</span>
+<span id="L37" class="ln">    37  </span>func (l *testLogger) Enabled(level zapcore.Level) bool  { return l.getCore().Enabled(level) }
+<span id="L38" class="ln">    38  </span>func (l *testLogger) With([]zapcore.Field) zapcore.Core { return l } <span class="comment">//nolint:ireturn // Implements zapcore.Core</span>
 <span id="L39" class="ln">    39  </span>func (l *testLogger) Check(entry zapcore.Entry, checkedEntry *zapcore.CheckedEntry) *zapcore.CheckedEntry {
 <span id="L40" class="ln">    40  </span>	if l.Enabled(entry.Level) {
 <span id="L41" class="ln">    41  </span>		return checkedEntry.AddCore(entry, l)
 <span id="L42" class="ln">    42  </span>	}
 <span id="L43" class="ln">    43  </span>	return checkedEntry
 <span id="L44" class="ln">    44  </span>}
-<span id="L45" class="ln">    45  </span>func (l *testLogger) Write(entry zapcore.Entry, fields []zapcore.Field) error {
-<span id="L46" class="ln">    46  </span>	l.coreMu.RLock()
-<span id="L47" class="ln">    47  </span>	defer l.coreMu.RUnlock()
-<span id="L48" class="ln">    48  </span>	return l.getCore().Write(entry, fields)
-<span id="L49" class="ln">    49  </span>}
-<span id="L50" class="ln">    50  </span>func (l *testLogger) Sync() error { return l.getCore().Sync() }
-<span id="L51" class="ln">    51  </span>
+<span id="L45" class="ln">    45  </span>
+<span id="L46" class="ln">    46  </span>func (l *testLogger) Write(entry zapcore.Entry, fields []zapcore.Field) error {
+<span id="L47" class="ln">    47  </span>	l.coreMu.RLock()
+<span id="L48" class="ln">    48  </span>	defer l.coreMu.RUnlock()
+<span id="L49" class="ln">    49  </span>	return l.getCore().Write(entry, fields)
+<span id="L50" class="ln">    50  </span>}
+<span id="L51" class="ln">    51  </span>func (l *testLogger) Sync() error { return l.getCore().Sync() }
+<span id="L52" class="ln">    52  </span>
 </pre><p></p>
 
 <div id="footer">
