--- a/goop/src/github.com/johnstarich/go/goop/cmd/goop/add_test.go.html
+++ b/goop/src/github.com/johnstarich/go/goop/cmd/goop/add_test.go.html
@@ -69,7 +69,7 @@
 <span id="L12" class="ln">    12  </span>	t.Run(&#34;static bin&#34;, func(t *testing.T) {
 <span id="L13" class="ln">    13  </span>		t.Parallel()
 <span id="L14" class="ln">    14  </span>		app := App{
-<span id="L15" class="ln">    15  </span>			getEnv: func(s string) string {
+<span id="L15" class="ln">    15  </span>			getEnv: func(string) string {
 <span id="L16" class="ln">    16  </span>				return &#34;&#34;
 <span id="L17" class="ln">    17  </span>			},
 <span id="L18" class="ln">    18  </span>			staticBinDir: staticBin,
