--- a/goop/src/github.com/johnstarich/go/goop/cmd/goop/info.go.html
+++ b/goop/src/github.com/johnstarich/go/goop/cmd/goop/info.go.html
@@ -66,7 +66,7 @@
 <span id="L9" class="ln">     9  </span>	&#34;github.com/spf13/cobra&#34;
 <span id="L10" class="ln">    10  </span>)
 <span id="L11" class="ln">    11  </span>
-<span id="L12" class="ln">    12  </span>func (a App) info(cmd *cobra.Command, args []string) error {
+<span id="L12" class="ln">    12  </span>func (a App) info(cmd *cobra.Command, _ []string) error {
 <span id="L13" class="ln">    13  </span>	binDir, err := a.userBinDir()
 <span id="L14" class="ln">    14  </span>	if err != nil {
 <span id="L15" class="ln">    15  </span>		return err
